--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1,14 +1,41 @@
-Brief_for_IJ_IDEA=Brief for IJ IDEA
-brief4ijidea=brief4ijidea
-BRIEF=BRIEF
-Brief=Brief
-N_A=N/A
-initializing=initializing
-Plugin_enabled=Plugin enabled
-Plugin_disabled=Plugin disabled
-Keymap_set_to_Brief=Keymap set to Brief
-
-Enabled_toggle_action.text=Brief Editor Emulator
-Enabled_toggle_action.description=Enable or disable the Brief Editor Emulation plugin
-
-Application_configurable.name=Brief Editor Emulation Settings
+brief.for.ij.idea=Brief for IJ IDEA
+you.must.enable.settings.editor.general.virtual.space.after.the.end.of.line.for.some.commands.right.side.of.window.and.column.marking.mode.to.work.properly=You must enable "Settings -> Editor -> General -> Virtual Space -> After the end of line" for some commands (Right Side of Window and Column Marking Mode) to work properly
+tooltip.in={0} in {1}
+action.brief.editor.emulator.text=Brief Editor Emulator
+action.enable.or.disable.brief.editor.emulation.plugin.description=Enable or disable the Brief Editor Emulation plugin
+brief=Brief
+keymap.set.to.brief=Keymap set to Brief
+keymap.restored.to.0=Keymap restored to {0}
+document.information=Document Information
+l.c.o=[L:C:O]
+checkbox.enable.or.disable.plugin=Enable or disable plugin.
+checkbox.show.or.hide.status.bar.widget=Show or hide the status bar widget.
+checkbox.paste.whole.lines.at.home.position=Paste whole lines at home position.
+checkbox.use.brief.home.key.functionality=Use Brief home key functionality.
+checkbox.startup.check.active.keymap.brief=Startup check active keymap is Brief.
+checkbox.exit.command.only.closes.active.editor="Exit" command only closes active editor.
+checkbox.write.all.exit.command.closes.idea="Write all and exit" command closes the IDEA.
+checkbox.do.not.show.virtual.space.setting.dialog.again=Do not show virtual space setting dialog again.
+checkbox.show.document.information.in.status.bar=Show document information in the status bar.
+enable.the.brief.editor.emulator.functionality.uncheck.to.disable.the.plugin=Enable the Brief Editor Emulator functionality. Uncheck to disable the plugin.
+shows.or.hides.the.plugin.widget.icon.in.the.status.bar.uncheck.to.hide.the.status.bar.icon=Shows or hides the plugin widget/icon in the Status Bar. Uncheck to hide the status bar icon.
+if.the.item.in.the.scrap.history.buffer.being.pasted.is.a.full.line.ends.with.a.line.termination.then.paste.it.at.the.beginning.of.the.current.line.uncheck.to.paste.at.the.current.cursor.location=If the item in the scrap history buffer being pasted is a full line (ends with a line termination), then paste it at the beginning of the current line. Uncheck to paste at the current cursor location.
+use.the.home.key.functionality.as.documented.in.brief.this.disables.the.normal.smart.home.functionality.uncheck.to.restore.smart.home.key.functionality.but.still.maintain.brief.home.home.home.key.functionality=Use the home key functionality as documented in Brief. This disables the normal "smart" home functionality. Uncheck to restore "smart" home key functionality, but still maintain Brief "home-home-home" key functionality.
+initial.check.for.active.keymap.is.set.to.use.the.included.brief.keymap.at.startup.uncheck.this.if.you.modify.the.keymap.which.makes.a.copy.of.the.default.brief.keymap.because.startup.will.configure.default.brief.keymap.as.active.keymap.if.this.is.checked=Initial check for active keymap is set to use the included Brief keymap at startup. Uncheck this if you modify the keymap, which makes a copy of the default Brief keymap, because startup will configure default Brief keymap as active keymap if this is checked.
+exit.command.will.close.the.currently.active.editor.not.the.idea.original.brief.functionality.would.close.the.application.uncheck.this.if.you.want.the.original.functionality="Exit" command will close the currently active editor, not the IDEA. Original Brief functionality would close the application. Uncheck this if you want the original functionality.
+write.all.and.exit.command.will.close.the.idea.this.is.original.brief.functionality.uncheck.this.if.you.want.to.close.only.the.editors.but.keep.the.idea.running="Write all and exit" command will close the IDEA. This is original Brief functionality. Uncheck this if you want to close only the editors, but keep the IDEA running.
+disables.showing.of.the.virtual.space.setting.dialog.again.when.initiating.the.right.side.of.window.action.uncheck.if.you.want.to.see.this.dialog.again=Disables showing of the virtual space setting dialog again when initiating the "Right side of window" action. Uncheck if you want to see this dialog again.
+shows.additional.document.information.offsets.lengths.in.the.status.bar.uncheck.if.you.don.t.want.to.see.extra.document.information.in.the.status.bar=Shows additional document information (offsets, lengths) in the status bar. Uncheck if you don't want to see extra document information in the status bar.
+configurable.name.brief.editor.emulation.settings=Brief Editor Emulation Settings
+column.marking.mode.currently.uses.highlightmanager.which.requires.a.project.to.obtain.an.instance=Column marking mode currently uses HighlightManager which requires a project to obtain an instance...
+column.marking.mode=<COLUMN-MARKING-MODE>
+command.name.delete.column.selection=Delete Column Selection
+command.name.cut.column.selection=Cut Column Selection
+dialog.message.file=file
+dialog.message.write.changes.to.before.closing.if.you.want.them.externally.accessible=Write changes to "{0}" before closing, if you want them externally accessible.
+dialog.title.write.changes=Write Changes?
+status.bar.text.brief=BRIEF: {0}
+repeat.string.or.command=Repeat String or Command
+repeat.count.d.s=Repeat count = %d: %s
+modify.count.then.right.arrow=modify count then right arrow...
+type.command.or.string=type command or string...
